--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,7 @@
 html {
-  font-size: clamp(14px, 1.2vw + 1rem, 18px);
+  font-size: 62.5%;
+  height: 1 vh;
+  overflow-y: auto;
 }
 
 * {
@@ -27,8 +29,7 @@ html {
   gap: 1.5rem;
 }
 .header-images {
-  width: 2rem;
-  height: 2rem;
+  height: clamp(20px, 1vw + 3rem, 44px);
 }
 .header-top {
   display: grid;
@@ -43,19 +44,19 @@ html {
   align-items: center;
   vertical-align: middle;
   grid-template-columns: repeat(auto-fit, 1fr);
+  /* border: 1px black solid; */
 }
 .input {
   height: 1rem;
-  width: clamp(1rem, 20vw, 30rem);
+  width: clamp(1rem, 20vw, 40rem);
   border-radius: 25px;
   padding: 0.5rem;
   font-size: larger;
   font-weight: bold;
-  margin-right: 5rem;
+  margin-right: 3rem;
 }
 .search {
-  margin-left: 2.5rem;
-  margin-right: 0;
+  margin-left: 1.5rem;
   height: 3rem;
   width: 3rem;
   /* border: 
@@ -63,11 +64,12 @@ html {
 }
 .username-bar {
   justify-content: end;
+  margin-right: 4rem;
 }
 .username {
   font-weight: bolder;
-  font-size: 1.5rem;
-  margin-right: 5rem;
+  font-size: clamp(1rem, 1vw + 1.5rem, 24px);
+  margin-right: 2rem;
 }
 .username-icon {
   height: 4rem;
@@ -75,44 +77,79 @@ html {
   margin-right: 1.5rem;
 }
 .notis {
-  margin-right: 5rem;
-  height: 2rem;
-  width: 2rem;
+  margin-right: 2rem;
+  height: 3rem;
+  width: 3rem;
 }
 .header-bottom {
   display: grid;
   grid-auto-flow: column;
+  /* border: 1px black solid; */
+}
+.welcome {
+  display: grid;
+  grid-auto-flow: column;
+  justify-content: start;
+  align-items: center;
+  margin-left: 4rem;
+}
+.username-image {
+  height: 8rem;
+  width: 8rem;
+}
+.text {
+  font-size: clamp(6px, 1vw + 0.5rem, 16px);
+  font-weight: bolder;
+  margin-left: 1rem;
+}
+.username-icon {
+  vertical-align: middle;
+}
+.create-bar {
+  display: grid;
+  grid-auto-flow: column;
+  align-items: center;
+  gap: 0.8rem;
+  margin-right: 4rem;
+}
+.create-buttons {
+  background-color: rgb(42, 70, 255);
+  padding: 0.4rem;
+  max-width: 12rem;
+  border-radius: 25px;
+  font-weight: bolder;
+  color: white;
+  border: 0.5px black solid;
 }
 /* sidebar section */
 .sidebar {
   display: grid;
   grid-template-columns: repeat(auto-fit, 1fr);
-  background-color: red;
+  background-color: rgb(42, 70, 255);
+  color: white;
   justify-content: center;
   grid-row: 1 / -1;
   font-weight: bolder;
-  border: 1px black solid;
+  border-right: 3px solid grey;
 }
 .dashboard {
-  font-size: 2.5rem;
-  margin-top: 2rem;
+  display: grid;
+  font-size: clamp(14px, 1.2vw + 2rem, 44px);
+  row-gap: 2rem;
 }
 #dashboard-image {
   vertical-align: middle;
-  width: 4rem;
-  height: 4rem;
-  margin-bottom: 8px;
-  border: 1px black solid;
+  width: 8rem;
+  height: 8rem;
+  margin-top: 2rem;
+  background-color: transparent;
 }
 .sidebar-links-container,
 .sidebar-footer-links {
-  border: 1px black solid;
   margin-bottom: 3rem;
-  font-size: 1.5rem;
-  margin-right: 1rem;
+  font-size: clamp(7px, 1.2vw + 1rem, 24px);
 }
 .sidebar-links {
-  border: 1px black solid;
   display: grid;
   grid-template-rows: repeat(auto-fll, minmax(50px, 1fr));
   grid-auto-flow: column;
@@ -125,14 +162,49 @@ html {
   width: 1.5rem;
   height: 1.5rem;
   vertical-align: middle;
-  border: 1px black solid;
+  background-color: white;
+  padding: 0.2rem;
+  border-radius: 2.5px;
+  /* border: 1px black solid; */
 }
 .sidebar-footer-links {
   margin-bottom: 6rem;
   margin-top: 0;
 }
+/* main section */
 .main {
   grid-row: 2 / -1;
+  background-color: rgb(229, 229, 229);
+  display: grid;
+  grid-template-columns: 1fr 1fr 0.8fr;
+  grid-template-rows: 0.1fr 1fr 0.1fr;
+  grid-template-areas:
+    "h h h"
+    "content content trends"
+    "f f f";
+}
+.box-1 {
+  grid-area: h;
+  border: 0.5px black solid;
+  display: grid;
+  grid-auto-flow: column;
+  justify-content: ;
+}
+.box-2 {
+  grid-area: content;
+  border: 0.5px black solid;
+}
+.box-3 {
+  grid-area: trends;
+  border: 0.5px black solid;
+}
+.box-4 {
+  grid-area: f;
+  border: 0.5px black solid;
+}
+.seperator-line {
+  width: 100%;
+  height: 0.3rem;
   background-color: grey;
-  border: 1px black solid;
+  opacity: 0.5;
 }
